Reenable minibuffer expansion

--- a/init.org
+++ b/init.org
@@ -68,8 +68,7 @@ I don't use custom but package.el will write selected packages to it.
   (setq frame-title-format '("%b - Emacs"))
 
   (setq mouse-autoselect-window t
-        focus-follows-mouse t
-        resize-mini-windows nil)
+        focus-follows-mouse t)
 
   ;; To start exwm if running as a daemon
   ;; (when (daemonp)
