Make emacs more visual line oriented

--- a/init.org
+++ b/init.org
@@ -190,6 +190,14 @@ I don't use custom but package.el will write selected packages to it.
     (with-temp-buffer
       (when (= 0 (apply #'call-process program nil t nil args))
         (string-trim (buffer-string)))))
+
+  (defun visual-line-range ()
+    "Return a cons cell of the range between the start and end of the visual line.
+  Indended to be used for highlighting of only the visual line in hl-line mode"
+    (save-excursion
+      (cons
+       (progn (beginning-of-visual-line) (point))
+       (progn (end-of-visual-line) (point)))))
 #+END_SRC
 
 *** C++ functions
@@ -610,6 +618,7 @@ Functions that are only used for C++ mode.
 
 #+END_SRC
 
+** Set global builtin modes
 #+BEGIN_SRC emacs-lisp
 
   ;; Enable saving of minibuffer history
@@ -621,6 +630,7 @@ Functions that are only used for C++ mode.
   ;; Set up highlighting of cursor/line
   (blink-cursor-mode -1)
   (global-hl-line-mode 1)
+  (setq hl-line-range-function #'visual-line-range) ; Only highlight visual line, not wrapped
 
   ;; Binds ‘C-c left’ and ‘C-c right’ to undo and redo window changes
   (winner-mode 1)
@@ -738,6 +748,10 @@ the configuration of their respective packages.
   ;; TODO: add some way of closing the window if no errors
   ;; And start gdb if not running
   (global-set-key (kbd "C-c C") #'cmake-ide-compile)
+
+  ;; Go to start and end of visual line instead of wrapped line
+  (global-set-key (kbd "C-a") #'beginning-of-visual-line)
+  (global-set-key (kbd "C-e") #'end-of-visual-line)
 
   ;; Unbind Pesky Sleep Button
   (global-unset-key [(control z)])
