Turn on visual bell

--- a/init.org
+++ b/init.org
@@ -682,6 +682,7 @@ haven't had the time to move yet).
    tab-always-indent 'complete            ; Use tab to complete
    ;; Faster than the default scp (according to Emacs wiki)
    tramp-default-method "ssh"
+   visible-bell 1 ; Turn off annoying sound
    )
 
   ;; Set up gnus
