--- a/init.org
+++ b/init.org
@@ -197,7 +197,7 @@ I don't use custom but package.el will write selected packages to it.
     (save-excursion
       (cons
        (progn (beginning-of-visual-line) (point))
-       (progn (end-of-visual-line) (point)))))
+       (progn (beginning-of-visual-line 2) (point)))))
 #+END_SRC
 
 *** C++ functions
@@ -875,6 +875,7 @@ Set up some auto modes and enable some useful disabled commands.
 
   ;; TODO: Move these to use use-package :mode instead
   (add-to-list 'auto-mode-alist '("\\.m\\'" . octave-mode)) ; objective-c by default
+  (add-to-list 'auto-mode-alist '("\\.pl\\'" . prolog-mode)) ; perl by default
   (add-to-list 'auto-mode-alist '("clfswmrc" . lisp-mode))
   (add-to-list 'auto-mode-alist '(".xmobarrc" . haskell-mode))
   (add-to-list 'auto-mode-alist '("Makefile2" . makefile-mode))
