Fix line highlighting so entire line is highlighted when truncate-lines is on

--- a/init.org
+++ b/init.org
@@ -194,10 +194,14 @@ I don't use custom but package.el will write selected packages to it.
   (defun visual-line-range ()
     "Return a cons cell of the range between the start and end of the visual line.
   Indended to be used for highlighting of only the visual line in hl-line mode"
-    (save-excursion
-      (cons
-       (progn (beginning-of-visual-line) (point))
-       (progn (beginning-of-visual-line 2) (point)))))
+    (if truncate-lines
+        (cons
+         (line-beginning-position)
+         (line-beginning-position 2))
+        (save-excursion
+          (cons
+           (progn (beginning-of-visual-line) (point))
+           (progn (beginning-of-visual-line 2) (point))))))
 #+END_SRC
 
 *** C++ functions
