Use c++17 by default

--- a/init.org
+++ b/init.org
@@ -711,6 +711,7 @@ haven't had the time to move yet).
   (setq-default
    word-wrap t ; Make line wraps happen at word boundaries
    indent-tabs-mode nil ; Don't use tabs unless the .dir-locals file says so
+   flycheck-clang-language-standard "c++17"
    )
 
   (with-eval-after-load 'dired-x
